index.html: Changing the instructions screen cover's position from absolute to a fixed so it remains covering the screen even if the user scrolls. Adding a click function to remove the sceen cover when the user selects the 'start' button.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -166,7 +166,7 @@ footer{
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
-    position: absolute;
+    position: fixed;
     z-index: 20;
 }
 
@@ -192,6 +192,7 @@ footer{
 .how-to-play-start{
     width: 60%;
     margin: 0 auto;
+    font-size: 32px;
 }
 
 /*------------------------------------------------------------ @media (mobile/small)*/
